[gd_scene load_steps=2 format=3 uid="uid://cpal6uoe5e51n"]

[ext_resource type="Script" uid="uid://cedihqi0c3e1k" path="res://scenes/prefabs/OfferCard.gd" id="1"]

[node name="OfferCard" type="PanelContainer"]
custom_minimum_size = Vector2(0, 120)
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="OfferName" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Special Offer"

[node name="Description" type="Label" parent="VBox"]
layout_mode = 2
text = "Description..."
autowrap_mode = 3

[node name="DiscountLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 16
text = "50% OFF!"

[node name="PriceLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "$4.99"

[node name="BuyButton" type="Button" parent="VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "SatÄ±n Al"
